--- a/admin/cas/reports/ncdpireports.html
+++ b/admin/cas/reports/ncdpireports.html
@@ -33,20 +33,20 @@
 <!-- start of content and bounding box -->
 <div class="box-round">
 
-  <table border="0" cellspacing="0" cellpadding="4" width="100%">
+  <table class="linkDescList">
     <tr class="headerRow">
       <td class="bold">North Carolina Specific Reports</td>
       <td class="bold">Description</td>
     </tr>
-    <tr class="~[evenoddrow;reset]">
+    <tr>
       <td><a href="/admin/cas/reports/nc_athletic_eligibility/nc_athletic_eligibility_prefs.html">Athletic Eligibility</a></td>
       <td>A listing of students who are eligible for athletic functions in North Carolina.</td>
     </tr>
-    <tr class="~[evenoddrow]">
+    <tr>
       <td><a href="/admin/cas/reports/nc_reportcard/nc_reportcard_prefs.html">North Carolina Report Card</a></td>
       <td>The report card for K-12 schools for the state of North Carolina.</td>
     </tr>
-    <tr class="~[evenoddrow]">
+    <tr>
       <td><a href="/admin/cas/reports/nc_transcript/nc_transcript_prefs.html">North Carolina Transcript</a></td>
       <td>The high school transcript for the state of North Carolina.</td>
     </tr>
