--- a/admin/faculty/s_nc_staffduty_edit.html
+++ b/admin/faculty/s_nc_staffduty_edit.html
@@ -35,7 +35,9 @@
 <table class="linkDescList">
    <tr>
       <td><label>Direct Student Contact</label></td>
-      <td colspan="3"><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]DIRECT_STUDENT_CONTACT_IND" value="1"></td>
+      <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]DIRECT_STUDENT_CONTACT_IND" value="1"></td>
+      <td><label>Number of Students</label></td>
+      <td><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]NUMBER_OF_STUDENTS" value="" size="6" maxlength="4" class="VARCHAR2"></td>
    </tr>
    <tr>
       <td><label>School</label></td>
@@ -51,10 +53,8 @@
             [/tlist_sql]
          </select>
       </td>
-   </tr>
-   <tr>
       <td><label>Duty Name</label></td>
-      <td colspan="3">
+      <td>
         <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_CODE">
             <option value=""> Select School</option>
             ~[tlist_sql;
@@ -65,16 +65,14 @@
         </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_DURATION_PERCENT</label></td>
-      <td colspan="3"><input type="integer" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_PERCENT" value="" size="5" maxlength="3" class="VARCHAR2"></td>
+      <td><label>Duration Percent</label></td>
+      <td><input type="integer" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_PERCENT" value="" size="5" maxlength="3" class="VARCHAR2"></td>
+      <td><label>Duration Time</label></td>
+      <td><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_TIME" value="" size="8" maxlength="6" class="VARCHAR2"></td>
    </tr>
-   <tr>
-      <td><label>STAFF_DURATION_TIME</label></td>
-      <td colspan="3"><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_TIME" value="" size="8" maxlength="6" class="VARCHAR2"></td>
-   </tr>
-   <td><label>STAFF_DUTY_MON</label></td>
+   <td><label>Mon</label></td>
    <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_MON" value="1"></td>
-   <td><label>MON_PERIOD</label></td>
+   <td><label>Mon Period</label></td>
    <td>
       <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]MON_PERIOD">
          <option value="">0
@@ -102,9 +100,9 @@
    </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_TUE</label></td>
+      <td><label>Tue</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_TUE" value="1"></td>
-      <td><label>TUE_PERIOD</label></td>
+      <td><label>Tue Period</label></td>
       <td>
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]TUE_PERIOD">
             <option value="">0
@@ -132,9 +130,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_WED</label></td>
+      <td><label>Wed</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_WED" value="1"></td>
-      <td><label>WED_PERIOD</label></td>
+      <td><label>Wed Period</label></td>
       <td>
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]WED_PERIOD">
             <option value="">0
@@ -162,9 +160,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_THU</label></td>
+      <td><label>Thu</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_THU" value="1"></td>
-      <td><label>THU_PERIOD</label></td>
+      <td><label>Thu Period</label></td>
       <td>
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]THU_PERIOD">
             <option value="">0
@@ -194,9 +192,9 @@
    <option value="20">20
    </select></td></tr>
    <tr>
-      <td><label>STAFF_DUTY_FRI</label></td>
+      <td><label>Fri</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_FRI" value="1"></td>
-      <td><label>FRI_PERIOD</label></td>
+      <td><label>Fri Period</label></td>
       <td>
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]FRI_PERIOD">
             <option value="">0
@@ -224,9 +222,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_SAT</label></td>
+      <td><label>Sat</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_SAT" value="1"></td>
-      <td><label>SAT_PERIOD</label></td>
+      <td><label>Sat Period</label></td>
       <td>
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]SAT_PERIOD">
             <option value="">0
@@ -254,9 +252,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_SUN</label></td>
+      <td><label>Sun</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_SUN" value="1"></td>
-      <td><label>SUN_PERIOD</label></td>
+      <td><label>Sun Period</label></td>
       <td>
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]SUN_PERIOD">
             <option value="">0
@@ -283,19 +281,9 @@
          </select>
       </td>
    </tr>
-   <tr>
-      <td><label>NUMBER_OF_STUDENTS</label></td>
-      <td><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]NUMBER_OF_STUDENTS" value="" size="6" maxlength="4" class="VARCHAR2"></td>
-   </tr>
-   </td>
-   </tr>
 </table>
 [else]
 <table class="linkDescList">
-   <tr>
-      <td><label>Direct Student Contact</label></td>
-      <td colspan="3"><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]DIRECT_STUDENT_CONTACT_IND" value="1"></td>
-   </tr>
    <tr>
       <td><label>School</label></td>
       <td>
@@ -310,8 +298,6 @@
             [/tlist_sql]
          </select>
       </td>
-   </tr>
-   <tr>
       <td><label>Duty Name</label></td>
       <td colspan="3">
         <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_CODE">
@@ -326,28 +312,34 @@
       </td>
    </tr>
    ~[tlist_sql;
-   SELECT STAFF_DUTY_DURATION_PERCENT, STAFF_DUTY_DURATION_TIME,
+   SELECT
+   DIRECT_STUDENT_CONTACT_IND,
+   NUMBER_OF_STUDENTS,
+   STAFF_DUTY_DURATION_PERCENT, STAFF_DUTY_DURATION_TIME,
    STAFF_DUTY_MON, MON_PERIOD,
    STAFF_DUTY_TUE, TUE_PERIOD,
    STAFF_DUTY_WED, WED_PERIOD,
    STAFF_DUTY_THU, THU_PERIOD,
    STAFF_DUTY_FRI, FRI_PERIOD,
    STAFF_DUTY_SAT, SAT_PERIOD,
-   STAFF_DUTY_SUN, SUN_PERIOD,
-   NUMBER_OF_STUDENTS
+   STAFF_DUTY_SUN, SUN_PERIOD
    FROM S_NC_STAFFDUTY WHERE ID = ~[gpv:id]
    ]
-   <tr>
-      <td><label>STAFF_DUTY_DURATION_PERCENT</label></td>
-      <td colspan="3"><input type="integer" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_PERCENT" value="~(STAFF_DUTY_DURATION_PERCENT;t)" size="5" maxlength="3" class="VARCHAR2"></td>
+    <tr>
+      <td><label>Direct Student Contact</label></td>
+      <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]DIRECT_STUDENT_CONTACT_IND" value="1" ~(DIRECT_STUDENT_CONTACT_IND;t;if.test=1;then=checked="checked";else=)></td>
+      <td><label>Number Of Students</label></td>
+      <td><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]NUMBER_OF_STUDENTS" value="~(number_of_students;t)" size="6" maxlength="4" class="VARCHAR2"></td>
    </tr>
    <tr>
-      <td><label>STAFF_DURATION_TIME</label></td>
-      <td colspan="3"><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_TIME" value="~(STAFF_DUTY_DURATION_TIME;t)" size="8" maxlength="6" class="VARCHAR2"></td>
+      <td><label>Duration Percent</label></td>
+      <td><input type="integer" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_PERCENT" value="~(STAFF_DUTY_DURATION_PERCENT;t)" size="5" maxlength="3" class="VARCHAR2"></td>
+      <td><label>Duration Time</label></td>
+      <td><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_DURATION_TIME" value="~(STAFF_DUTY_DURATION_TIME;t)" size="8" maxlength="6" class="VARCHAR2"></td>
    </tr>
-   <td><label>STAFF_DUTY_MON</label></td>
+   <td><label>Mon</label></td>
    <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_MON" value="1" ~(staff_duty_mon;t;if.test=1;then=checked="checked";else=)></td>
-   <td><label>MON_PERIOD</label></td>
+   <td><label>Mon Period</label></td>
    <td>
         <input type="hidden" id="mon_period" class="process" value="~(mon_period;t)">
       <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]MON_PERIOD" id="mon_period_select">
@@ -376,9 +368,9 @@
    </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_TUE</label></td>
+      <td><label>Tue</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_TUE" value="1" ~(staff_duty_tue;t;if.test=1;then=checked="checked";else=)></td>
-      <td><label>TUE_PERIOD</label></td>
+      <td><label>Tue Period</label></td>
       <td>
         <input type="hidden" id="tue_period" class="process" value="~(tue_period;t)">
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]TUE_PERIOD" id="tue_period_select">
@@ -407,9 +399,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_WED</label></td>
+      <td><label>Wed</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_WED" value="1" ~(staff_duty_wed;t;if.test=1;then=checked="checked";else=)></td>
-      <td><label>WED_PERIOD</label></td>
+      <td><label>Wed Period</label></td>
       <td>
         <input type="hidden" id="wed_period" class="process" value="~(wed_period;t)">
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]WED_PERIOD" id="wed_period_select">
@@ -438,9 +430,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_THU</label></td>
+      <td><label>Thu</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_THU" value="1" ~(staff_duty_thu;t;if.test=1;then=checked="checked";else=)></td>
-      <td><label>THU_PERIOD</label></td>
+      <td><label>Thu Period</label></td>
       <td>
         <input type="hidden" id="thu_period" class="process" value="~(thu_period;t)">
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]THU_PERIOD" id="thu_period_select">
@@ -471,9 +463,9 @@
    <option value="20">20
    </select></td></tr>
    <tr>
-      <td><label>STAFF_DUTY_FRI</label></td>
+      <td><label>Fri</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_FRI" value="1" ~(staff_duty_fri;t;if.test=1;then=checked="checked";else=)></td>
-      <td><label>FRI_PERIOD</label></td>
+      <td><label>Fri Period</label></td>
       <td>
         <input type="hidden" id="fri_period" class="process" value="~(fri_period;t)">
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]FRI_PERIOD" id="fri_period_select">
@@ -502,9 +494,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_SAT</label></td>
+      <td><label>Sat</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_SAT" value="1" ~(staff_duty_sat;t;if.test=1;then=checked="checked";else=)></td>
-      <td><label>SAT_PERIOD</label></td>
+      <td><label>Sat Period</label></td>
       <td>
         <input type="hidden" id="sat_period" class="process" value="~(sat_period;t)">
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]SAT_PERIOD" id="sat_period_select">
@@ -533,9 +525,9 @@
       </td>
    </tr>
    <tr>
-      <td><label>STAFF_DUTY_SUN</label></td>
+      <td><label>Sun</label></td>
       <td><input type="checkbox" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]STAFF_DUTY_SUN" value="1" ~(staff_duty_sun;t;if.test=1;then=checked="checked";else=)></td>
-      <td><label>SUN_PERIOD</label></td>
+      <td><label>Sun Period</label></td>
       <td>
         <input type="hidden" id="sun_period" class="process" value="~(sun_period;t)">
          <select name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]SUN_PERIOD" id="sun_period_select">
@@ -562,12 +554,6 @@
             <option value="20">20
          </select>
       </td>
-   </tr>
-   <tr>
-      <td><label>NUMBER_OF_STUDENTS</label></td>
-      <td><input type="text" name="CF-[USERS:~[GPV:USERSDCID].S_NC_STAFFDUTY.S_NC_STAFFDUTY:~[GPV:ID]]NUMBER_OF_STUDENTS" value="~(number_of_students;t)" size="6" maxlength="4" class="VARCHAR2"></td>
-   </tr>
-   </td>
    </tr>
 </table>
 [/tlist_sql]
