--- a/admin/faculty/s_nc_staffinfo.html
+++ b/admin/faculty/s_nc_staffinfo.html
@@ -31,14 +31,14 @@
 <tbody>
 
 <table border="0" cellspacing="0" cellpadding="4" class="fourDTable">
-<tr><td><label>CERTIFIED_NAME</label></td><td colspan="3"><input type="text" name="[USERS.S_NC_STAFFINFO]CERTIFIED_NAME" value="" size="35" maxlength="60" class="VARCHAR2"></td></tr>
-<tr><td><label>EMPLOYEE_NUMBER</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMPLOYEE_NUMBER" value="" size="17" maxlength="12" class="VARCHAR2"></td></tr>
-<tr><td><label>PAID_OUT_OF_DISTRICT</label></td><td><input type="checkbox" name="[USERS.S_NC_STAFFINFO]PAID_OUT_OF_DISTRICT" value="1"></td></tr>
-<tr><td><label>CELL_PHONE</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]CELL_PHONE" value="" size="15" maxlength="10" class="VARCHAR2"></td></tr>
-<tr><td><label>EMERG_CONTACT_NAME</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMERG_CONTACT_NAME" value="" size="35" maxlength="40" class="VARCHAR2"></td></tr>
-<tr><td><label>EMERG_CONTACT_HOME_PHONE</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMERG_CONTACT_HOME_PHONE" value="" size="15" maxlength="10" class="VARCHAR2"></td></tr>
-<tr><td><label>EMERG_CONTACT_WORK_PHONE</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMERG_CONTACT_WORK_PHONE" value="" size="15" maxlength="10" class="VARCHAR2"></td></tr>
-<tr><td><label>UNLISTED</label></td><td><input type="checkbox" name="[USERS.S_NC_STAFFINFO]UNLISTED" value="1"></td></tr>
+<tr><td><label>Certified Name</label></td><td colspan="3"><input type="text" name="[USERS.S_NC_STAFFINFO]CERTIFIED_NAME" value="" size="35" maxlength="60" class="VARCHAR2"></td></tr>
+<tr><td><label>Employee Number</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMPLOYEE_NUMBER" value="" size="17" maxlength="12" class="VARCHAR2"></td></tr>
+<tr><td><label>Paid Out Of District</label></td><td><input type="checkbox" name="[USERS.S_NC_STAFFINFO]PAID_OUT_OF_DISTRICT" value="1"></td></tr>
+<tr><td><label>Cell Phone</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]CELL_PHONE" value="" size="15" maxlength="10" class="VARCHAR2"></td></tr>
+<tr><td><label>Emergency Contact</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMERG_CONTACT_NAME" value="" size="35" maxlength="40" class="VARCHAR2"></td></tr>
+<tr><td><label>Emergency Cell Phone</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMERG_CONTACT_HOME_PHONE" value="" size="15" maxlength="10" class="VARCHAR2"></td></tr>
+<tr><td><label>Emergency Work Phone</label></td><td><input type="text" name="[USERS.S_NC_STAFFINFO]EMERG_CONTACT_WORK_PHONE" value="" size="15" maxlength="10" class="VARCHAR2"></td></tr>
+<tr><td><label>Unlisted</label></td><td><input type="checkbox" name="[USERS.S_NC_STAFFINFO]UNLISTED" value="1"></td></tr>
 
 </table>
 
