Nurse Module - Removed option to delete instructions.

--- a/admin/medicine_log/medicine_entry_edit2.html
+++ b/admin/medicine_log/medicine_entry_edit2.html
@@ -79,7 +79,7 @@
 <br>
 
 <div class="button-row">
-<input type="hidden" name="ac" value="prim">~(deletebutton2)~[submitbutton]</div>
+<input type="hidden" name="ac" value="prim">~[submitbutton]</div>
 </div>
 <br>
 <!-- end of content of bounding box -->
