TIMS - Changes in extract / CN - Fix blank space in 1546 extract

--- a/admin/cas/reports/child_nutrition/1546_CNS_QSP.html
+++ b/admin/cas/reports/child_nutrition/1546_CNS_QSP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="">
 <!-- non framed -->
 <head>
   <title>1546 Child Nutrition Extract</title>
@@ -30,7 +30,7 @@
 
 <h1>1546 Child Nutrition Extract</h1>
 <!-- start of content and bounding box -->
-<div class="box-round">
+<div class="box-round" style="float:right;">
   <script type="text/javascript" language="javascript" src="/scripts/cas/jquery.dataTables.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/scripts/cas/ZeroClipboard.js"></script>
 <script type="text/javascript" charset="utf-8" src="/scripts/cas/TableTools.min.js"></script>
