--- a/admin/cas/reports/child_nutrition/1708_Linker_rephub.html
+++ b/admin/cas/reports/child_nutrition/1708_Linker_rephub.html
@@ -30,7 +30,7 @@
 
 <h1>1709_Linker_rephub</h1>
 <!-- start of content and bounding box -->
-<div class="box-round">
+<div class="box-round" style="float:right;">
   <script type="text/javascript" language="javascript" src="/scripts/cas/jquery.dataTables.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/scripts/cas/ZeroClipboard.js"></script>
 <script type="text/javascript" charset="utf-8" src="/scripts/cas/TableTools.min.js"></script>
